# GUI-project

./: CMakeLists.txt  ColorGradient.cpp  ColorGradient.h  DraggingUI.cpp  DraggingUI.h  DropDownMenu.cpp  DropDownMenu.h  FileItem.cpp  FileItem.h  FileMenu.cpp  FileMenu.h  FinalFilesMenu.cpp  FinalFilesMenu.h  ImageName.h  Images.cpp  Images.h  Key.h  KeyBoardShortcut.cpp  KeyBoardShortcut.h  LabelMakerScreen.cpp  LabelMakerScreen.h  Letter.cpp  Letter.h  Menu.cpp  Menu.h  MenuOptions.cpp  MenuOptions.h  MovingObject.cpp  MovingObject.h  MultiText.cpp  MultiText.h  NAryTree.cpp  NAryTree.h  Node.h  ShadowBox.cpp  ShadowBox.h  SnapShot.cpp  SnapShot.h  SnapShotInterface.cpp  SnapShotInterface.h  (+8 more)
